# nicosoft-ai-studio

./: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
computer-use/: .gitignore
computer-use/macOS/: Package.swift
computer-use/windows/: .gitkeep  CMakeLists.txt
computer-use/windows/src/capture/: ScreenStreamer.cpp  ScreenStreamer.h
computer-use/windows/src/overlay/: Overlay.cpp  Overlay.h
computer-use/windows/src/permissions/: Permissions.cpp  Permissions.h
computer-use/windows/src/server/: Server.cpp
docs/: block3-e2e-verdict-ui.md  code-review-2026-06-10.md  coordinator-heavy-task-orchestration.md  dogfood-findings-20260613.md
docs/l4-tests/: README.md  benchmark.md  case-plan.md  round-A-coordinator-sabotage.md  round-C-direct-chat.md  round-c1.md  round-c3-c2.md  round-c5-produce.md  round-d-recall.md  round-e-attribution.md  round-nspay-measure.md  round-nspay.md
e2e/: acceptance-dag-collab.mjs  acceptance-fulltext-single.mjs  agent-compact-e2e.mjs  agent-events-e2e.mjs  agent-intokens-verify.mjs  async-subagent-e2e.mjs  atlas-router.mjs  auto-scroll-debug.mjs  code-execution-e2e.mjs  code-execution-smoke.ts  collab-bypass-verify.mjs  collaboration-modes.mjs  command-palette-e2e.mjs  conv-switch-e2e.mjs  coordinator-approval-e2e.mjs  coordinator-collaborate-e2e.mjs  coordinator-dispatch-tools.mjs  coordinator-router.mjs  coordinator-services-e2e.mjs  custom-role.mjs  danny-understand-nsai.mjs  designer-async-image.mjs  designer-composer.mjs  engineer-agent.mjs  generalist-chat.mjs  mcp-json-import.mjs  menu-clip-sweep.mjs  midsize-acceptance.mjs  midsize-single.mjs  mode-picker-e2e.mjs  openai-agent-e2e.mjs  path-bar-all-roles.mjs  plan-dialog-e2e.mjs  plan-first-e2e.mjs  plan-mode-e2e.mjs  project-conventions-e2e.mjs  project-crud-e2e.mjs  project-full-e2e.mjs  project-state-persist-e2e.mjs  roles-enable-disable.mjs  (+33 more)
resources/studio-guide/: chat.md  extensions.md  memory.md  overview.md  preview-visuals.md  projects.md  scheduled.md  settings.md  skills.md  tasks-panel.md  workflows.md  workspace.md
scripts/: rebuild-native.mjs
src/main/: index.ts  user-agent.ts
src/main/agent/: approval.ts  async-registry.ts  collab.ts  compact.ts  confine.ts  context.ts  execution.ts  llm-gemini.ts  llm-openai.ts  llm.ts  loop-guards.ts  loop.ts  memory-recall.ts  preview.ts  (+10 more)
src/preload/: index.ts
src/renderer/: index.html
src/shared/: roles.ts  thinking.ts
(+421 files in other folders)
